--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>{{subwayinfo}}</p>
       </div>
       <div class="sc-container animate-grow" ng-show="focus == 'music'">
-        <audio id="player" controls="" autoplay="" preload autobuffer></audio>
+        <audio id="player" controls="" autoplay="" preload autobuffer style="display: none"></audio>
         <div>
           <canvas id="visualizer" width="150" height="150"></canvas>
         </div>
